# baarbarity

./: CMakeLists.txt  TODO  ideas
src/: CMakeLists.txt  building.cpp  building.h  facebookrequest.cpp  facebookrequest.h  gameengine.cpp  gameengine.h  gamestate.cpp  gamestate.h  gluimanager.cpp  gluimanager.h  main.cpp  milkshapemodel.cpp  milkshapemodel.h  model.h  modelloader.cpp  modelloader.h  player.cpp  player.h  pools.cpp  pools.h  settings.cpp  settings.h  sheep.cpp  sheep.h  terrain.cpp  terrain.h  utilities.cpp  utilities.h  welshman.cpp  welshman.h  worldobject.cpp  worldobject.h
src/actions/: action.cpp  action.h  constructionaction.cpp  constructionaction.h  eatgrassaction.cpp  eatgrassaction.h  moveaction.cpp  moveaction.h  playermoveaction.cpp  playermoveaction.h
src/data/: icons.qrc  models.qrc  portraits.qrc  scripts.qrc  shaders.qrc  state.qrc  textures.qrc
src/data/models/: fence.ms3d  sheep.ms3d
src/data/scripts/: buildings.qs  cpuwelsh.qs  game.qs  humansheep.qs  sheep.qs  welshman.qs
src/data/shaders/: baseLayerFrag.glsl  baseLayerVert.glsl  billboardFrag.glsl  billboardVert.glsl  terrainFrag.glsl  terrainVert.glsl  waterFrag.glsl  waterVert.glsl  worldObjectFrag.glsl  worldObjectVert.glsl
src/data/state/: menu.baa
src/gui/: facebooklogindialog.cpp  facebooklogindialog.h  facebooklogindialog.ui  gamehud.cpp  gamehud.h  gamehud.ui  gamemenudialog.cpp  gamemenudialog.h  gamemenudialog.ui  menuhud.cpp  menuhud.h  menuhud.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  playeroptionsdialog.cpp  playeroptionsdialog.h  playeroptionsdialog.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui  shadereditor.cpp  shadereditor.h  shadereditor.ui
src/scripting/: ability.cpp  ability.h  billboard.cpp  billboard.h  buildingtype.cpp  buildingtype.h  colorprototype.cpp  colorprototype.h  engineprototype.cpp  engineprototype.h  objectmapclass.h  objecttype.cpp  objecttype.h  playertype.cpp  playertype.h  prototypestore.cpp  prototypestore.h  requirement.cpp  requirement.h  resourcerequirement.h  scriptmanager.cpp  scriptmanager.h  timer.cpp  timer.h  vec2prototype.cpp  vec2prototype.h
